--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,11 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 			<version>2.4.2</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+			<version>2.4.5</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
