--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.defer-datasource-initialization=true
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/car_shop
 spring.datasource.username=root
-spring.datasource.password=Ilya468279135
+spring.datasource.password=password
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 #spring.jpa.show-sql: true
