--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,16 @@
 services:
-  mysql:
-    image: mysql:latest
-    container_name: mysql_container
-    environment:
-      MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: car_shop
+  spring-app:
+    image: car-shop-sber
     ports:
-      - "3306:3306"
-    volumes:
-      - mysql_data:/var/lib/mysql
+      - "8081:8080"
+    depends_on:
+      - postgres
 
-volumes:
-  mysql_data:
+  db:
+    image: postgres:latest
+    environment:
+      POSTGRES_DB: CarShopSber
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: password
+    ports:
+      - "5432:5432"
