--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.defer-datasource-initialization=true
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/car_shop
+spring.datasource.url=jdbc:postgresql://localhost:5432/CarShopSber
 spring.datasource.username=root
 spring.datasource.password=password
-spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 #spring.jpa.show-sql: true
