--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,34 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<version>${project.parent.version}</version>
 			</plugin>
+			<plugin>
+				<groupId>io.snyk</groupId>
+				<artifactId>snyk-maven-plugin</artifactId>
+				<version>2.2.0</version>
+				<inherited>false</inherited>
+				<executions>
+					<execution>
+						<id>snyk-test</id>
+						<goals>
+							<goal>test</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>snyk-monitor</id>
+						<goals>
+							<goal>monitor</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<apiToken>38cb501e-da66-45ba-8c4b-11880cad04d2</apiToken>
+					<args>
+						<arg>--all-projects</arg>
+					</args>
+				</configuration>
+			</plugin>
 		</plugins>
+
 	</build>
 
 </project>
