--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     depends_on:
       - postgres
 
-  db:
+  postgres:
     image: postgres:latest
     environment:
       POSTGRES_DB: CarShopSber
