--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,7 @@
 					</execution>
 				</executions>
 				<configuration>
+					<failOnIssues>false</failOnIssues>
 					<apiToken>38cb501e-da66-45ba-8c4b-11880cad04d2</apiToken>
 					<args>
 						<arg>--all-projects</arg>
