--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,7 @@
 					<apiToken>38cb501e-da66-45ba-8c4b-11880cad04d2</apiToken>
 					<args>
 						<arg>--all-projects</arg>
+						<arg>--json-file-output=results-code.json</arg>
 					</args>
 				</configuration>
 			</plugin>
