--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,18 @@
 				<inherited>false</inherited>
 				<executions>
 					<execution>
+						<id>code-test</id>
+						<goals>
+							<goal>code-test</goal>
+						</goals>
+						<configuration>
+							<failOnIssues>true</failOnIssues><args>
+							<arg>--json-file-output=results-code.json</arg>
+						</args>
+
+						</configuration>
+					</execution>
+					<execution>
 						<id>snyk-monitor</id>
 						<goals>
 							<goal>monitor</goal>
@@ -95,11 +107,9 @@
 					</execution>
 				</executions>
 				<configuration>
-					<failOnIssues>false</failOnIssues>
 					<apiToken>38cb501e-da66-45ba-8c4b-11880cad04d2</apiToken>
 					<args>
 						<arg>--all-projects</arg>
-						<arg>--json-file-output=results-code.json</arg>
 					</args>
 				</configuration>
 			</plugin>
