--- a/pom.xml
+++ b/pom.xml
@@ -94,10 +94,12 @@
 						</goals>
 						<configuration>
 							<skip>true</skip>
-							<failOnIssues>false</failOnIssues><args>
+							<failOnIssues>false</failOnIssues>
+							<args>
 							<arg>--report --project-name="CarShopSber"</arg>
 							<arg>--json-file-output=results-code.json</arg>
 						</args>
+
 
 						</configuration>
 					</execution>
@@ -109,6 +111,8 @@
 					</execution>
 				</executions>
 				<configuration>
+
+					<failOnIssues>false</failOnIssues>
 					<apiToken>38cb501e-da66-45ba-8c4b-11880cad04d2</apiToken>
 					<args>
 						<arg>--all-projects</arg>
