--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,7 @@
 							<goal>code-test</goal>
 						</goals>
 						<configuration>
+							<failOnIssues>false</failOnIssues>
 							<apiToken>38cb501e-da66-45ba-8c4b-11880cad04d2</apiToken>
 							<args>
 								<arg>--report</arg>
