--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,7 @@
 					<apiToken>38cb501e-da66-45ba-8c4b-11880cad04d2</apiToken>
 					<args>
 						<arg>--report</arg>
-						<arg>--project-name="CarShopSber"</arg>
+						<arg>--project-name=\"CarShopSber\"</arg>
 						<arg>--json-file-output=results-code.json</arg>
 					</args>
 				</configuration>
