--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,37 @@
-services:
-  spring-app:
-    image: car-shop-sber
-    ports:
-      - "8081:8080"
-    depends_on:
-      - postgres
+version: '3.8'
 
+services:
   postgres:
-    image: postgres:latest
+    image: postgres:14.11-alpine3.19
     environment:
-      POSTGRES_DB: CarShopSber
       POSTGRES_USER: root
       POSTGRES_PASSWORD: password
+      POSTGRES_DB: CarShopSber
+    networks:
+      - dev-net-3
+    volumes:
+      - vol-pg-3:/var/lib/postgresql/data
     ports:
-      - "5432:5432"
+      - "5440:5432"
+
+  spring-app:
+    build: .
+    depends_on:
+      - postgres
+    environment:
+      DB_HOST: postgres
+      DB_PORT: 5432
+      DB_USER: root
+      DB_PASSWORD: password
+      DB_NAME: CarShopSber
+    networks:
+      - dev-net-3
+    ports:
+      - "8081:8081"
+
+networks:
+  dev-net-3:
+    driver: bridge
+
+volumes:
+  vol-pg-3: {}
