--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.defer-datasource-initialization=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/CarShopSber
-spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:CarShopSber}
+spring.datasource.username=${DB_USER:root}
+spring.datasource.password=${DB_PASSWORD:password}
+
+server.port=8081
 #spring.jpa.show-sql: true
