--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,5 @@ spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${D
 spring.datasource.username=${DB_USER:root}
 spring.datasource.password=${DB_PASSWORD:password}
 
+server.port=8081
 #spring.jpa.show-sql: true
