--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.defer-datasource-initialization=true
 spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:CarShopSber}
 spring.datasource.username=${DB_USER:root}
 spring.datasource.password=${DB_PASSWORD:password}
+
+spring.liquibase.change-log=classpath:migration/changelog.json
+spring.liquibase.enabled= false
+
 
 server.port=8081
 #spring.jpa.show-sql: true
