--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.defer-datasource-initialization=false
 spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:CarShopSber}
 spring.datasource.username=${DB_USER:root}
 spring.datasource.password=${DB_PASSWORD:password}
 
 spring.liquibase.change-log=classpath:migration/changelog.json
-spring.liquibase.enabled= false
+spring.liquibase.enabled= true
 
 
 server.port=8081
